[gd_scene load_steps=12 format=2]

[ext_resource path="res://map.tscn" type="PackedScene" id=1]
[ext_resource path="res://world.gd" type="Script" id=2]
[ext_resource path="res://Cthulhu's Calling.otf" type="DynamicFontData" id=3]
[ext_resource path="res://right.png" type="Texture" id=4]
[ext_resource path="res://flip.png" type="Texture" id=5]
[ext_resource path="res://left.png" type="Texture" id=6]
[ext_resource path="res://up.png" type="Texture" id=7]
[ext_resource path="res://down.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 4
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 56
use_mipmaps = true
use_filter = true
extra_spacing_char = 2
font_data = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ViewportContainer1" type="ViewportContainer" parent="HBoxContainer"]
margin_right = 384.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Viewport1" type="Viewport" parent="HBoxContainer/ViewportContainer1"]
size = Vector2( 384, 288 )
own_world = true
handle_input_locally = false
render_target_update_mode = 3

[node name="MapPast" parent="HBoxContainer/ViewportContainer1/Viewport1" instance=ExtResource( 1 )]
unique_name_in_owner = true

[node name="ViewportContainer2" type="ViewportContainer" parent="HBoxContainer"]
margin_left = 388.0
margin_right = 1028.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Viewport2" type="Viewport" parent="HBoxContainer/ViewportContainer2"]
size = Vector2( 640, 480 )
own_world = true
handle_input_locally = false
render_target_update_mode = 3

[node name="MapPresent" parent="HBoxContainer/ViewportContainer2/Viewport2" instance=ExtResource( 1 )]
unique_name_in_owner = true

[node name="ViewportContainer3" type="ViewportContainer" parent="HBoxContainer"]
margin_left = 1032.0
margin_right = 1544.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Viewport3" type="Viewport" parent="HBoxContainer/ViewportContainer3"]
size = Vector2( 512, 600 )
own_world = true
handle_input_locally = false
render_target_update_mode = 3

[node name="MapFuture" parent="HBoxContainer/ViewportContainer3/Viewport3" instance=ExtResource( 1 )]
unique_name_in_owner = true

[node name="TimeContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="TimeContainer"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="ProgressBar" type="ProgressBar" parent="TimeContainer/MarginContainer"]
unique_name_in_owner = true
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
percent_visible = false

[node name="MarginContainer" type="MarginContainer" parent="TimeContainer/MarginContainer/ProgressBar"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -17.0
margin_bottom = 17.0

[node name="TimeLabel" type="Label" parent="TimeContainer/MarginContainer/ProgressBar/MarginContainer"]
unique_name_in_owner = true
margin_right = 984.0
margin_bottom = 34.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="ControlsContainer2" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -222.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsContainer2"]
margin_left = 20.0
margin_top = 20.0
margin_right = 220.0
margin_bottom = 205.0
custom_constants/separation = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="ControlsContainer2/VBoxContainer"]
margin_right = 200.0
margin_bottom = 54.0
alignment = 1

[node name="Up" type="Button" parent="ControlsContainer2/VBoxContainer/HBoxContainer2"]
margin_left = 70.0
margin_right = 130.0
margin_bottom = 54.0
size_flags_horizontal = 0
size_flags_vertical = 0
action_mode = 0
icon = ExtResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="ControlsContainer2/VBoxContainer"]
margin_top = 64.0
margin_right = 200.0
margin_bottom = 118.0
custom_constants/separation = 10

[node name="Left" type="Button" parent="ControlsContainer2/VBoxContainer/HBoxContainer"]
margin_right = 60.0
margin_bottom = 54.0
size_flags_horizontal = 0
size_flags_vertical = 0
action_mode = 0
icon = ExtResource( 6 )

[node name="Down" type="Button" parent="ControlsContainer2/VBoxContainer/HBoxContainer"]
margin_left = 70.0
margin_right = 130.0
margin_bottom = 54.0
size_flags_horizontal = 0
size_flags_vertical = 0
action_mode = 0
icon = ExtResource( 8 )

[node name="Right" type="Button" parent="ControlsContainer2/VBoxContainer/HBoxContainer"]
margin_left = 140.0
margin_right = 200.0
margin_bottom = 54.0
size_flags_horizontal = 0
size_flags_vertical = 0
action_mode = 0
icon = ExtResource( 4 )

[node name="HBoxContainer3" type="HBoxContainer" parent="ControlsContainer2/VBoxContainer"]
margin_top = 128.0
margin_right = 200.0
margin_bottom = 185.0
alignment = 1

[node name="Flip" type="Button" parent="ControlsContainer2/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 38.0
margin_right = 162.0
margin_bottom = 57.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color_disabled = Color( 0.14902, 0.14902, 0.14902, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
disabled = true
action_mode = 0
text = " x 0"
icon = ExtResource( 5 )
align = 0

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer2" type="MarginContainer" parent="GameOverPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -471.5
margin_top = -132.5
margin_right = 471.5
margin_bottom = 132.5
custom_constants/margin_bottom = 20

[node name="Label" type="Label" parent="GameOverPanel/MarginContainer2"]
margin_right = 943.0
margin_bottom = 245.0
custom_fonts/font = SubResource( 3 )
text = "You have been killed 
by some falling debris...

Game over!"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="GameOverPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.5
margin_top = -77.0
margin_right = 75.5
custom_constants/margin_bottom = 20

[node name="Restart" type="Button" parent="GameOverPanel/MarginContainer"]
margin_right = 151.0
margin_bottom = 57.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color_disabled = Color( 0.14902, 0.14902, 0.14902, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
action_mode = 0
text = "Restart"
align = 0

[node name="GameOverPanel2" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer2" type="MarginContainer" parent="GameOverPanel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -471.5
margin_top = -132.5
margin_right = 471.5
margin_bottom = 132.5
custom_constants/margin_bottom = 20

[node name="Label" type="Label" parent="GameOverPanel2/MarginContainer2"]
margin_top = 31.0
margin_right = 943.0
margin_bottom = 214.0
custom_fonts/font = SubResource( 3 )
text = "You ran out of time and power...

Game over!"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="GameOverPanel2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.5
margin_top = -77.0
margin_right = 75.5
custom_constants/margin_bottom = 20

[node name="Restart" type="Button" parent="GameOverPanel2/MarginContainer"]
margin_right = 151.0
margin_bottom = 57.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color_disabled = Color( 0.14902, 0.14902, 0.14902, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
action_mode = 0
text = "Restart"
align = 0

[node name="VictoryPanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer2" type="MarginContainer" parent="VictoryPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -471.5
margin_top = -132.5
margin_right = 471.5
margin_bottom = 132.5
custom_constants/margin_bottom = 20

[node name="Label" type="Label" parent="VictoryPanel/MarginContainer2"]
margin_right = 943.0
margin_bottom = 245.0
custom_fonts/font = SubResource( 3 )
text = "You enter the portal...
Finally! You are free!

...Or are you?"
align = 1
